# BadguyEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Camera.hpp  Color.hpp  Draw.hpp  Drawer.h  Screen.hpp  main.h
include/Structures/: Mesh.hpp  Polygon.hpp
include/Structures/Shapes/: Plane.hpp  Rectangle.hpp  Shape.hpp  Triangle.hpp
src/: Drawer.cpp  main.cpp  main.hpp
